# docker-static-bin

./: CMakeLists.txt  README.md  conanfile.txt
c/: CMakeLists.txt  crappy_sh.c  env.c  faster_copy.c  list.c  strip.c
c/cmd/: copy.c  copy.h  crappy_sh.c  crappy_sh.h  env.c  env.h  list.c  list.h  main.c  symlink.c  symlink.h
c/lib/: shell.c  shell.h
cc/: CMakeLists.txt  crappy_sh.cc  delme.cc
cmd/: and.c  copy.c  crappy_sh.c  crappy_sh.h  strip.c
lib/: shell.c  shell.h
test/: test_crappy_sh.c  test_env.c
